--- a/nso-dev.properties
+++ b/nso-dev.properties
@@ -1,3 +1,7 @@
 nso.host=http://10.4.100.12:8887/api
 nso.user=fog_user
 nso.pwd=fogpoc
+
+openstack.host=http://10.3.0.4:5000/v3
+openstack.user=admin
+openstack.pwd=bsc.admin
