--- a/nso-dev.properties
+++ b/nso-dev.properties
@@ -5,3 +5,8 @@ nso.pwd=fogpoc
 openstack.host=http://10.3.0.4:5000/v3
 openstack.user=admin
 openstack.pwd=bsc.admin
+
+spring.rabbitmq.host=192.168.22.60
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
