--- a/nso-dev.properties
+++ b/nso-dev.properties
@@ -9,4 +9,4 @@ openstack.pwd=bsc.admin
 spring.rabbitmq.host=192.168.22.60
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
+spring.rabbitmq.password=admin1
