--- a/nso-test.properties
+++ b/nso-test.properties
@@ -9,6 +9,6 @@ nso.pwd=fogpoc
 #spring.rabbitmq.host=192.168.22.60
 #spring.rabbitmq.port=56721
 #spring.rabbitmq.username=admin
-#spring.rabbitmq.password=admin1
+#spring.rabbitmq.password=admin
 
-api.docUrl=http://127.0.0.1:8765/
+api.docUrl=http://192.168.22.60:8765/
