--- a/nso-dev.properties
+++ b/nso-dev.properties
@@ -1,4 +1,4 @@
-nso.host=http://10.4.100.12:8887/api
+nso.host=http://10.4.100.12:8887/apitest
 nso.user=fog_user100
 nso.pwd=fogpoc100000
 test=200
